--- a/demos/Laplace_NtD_indirect.ipynb
+++ b/demos/Laplace_NtD_indirect.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "Let's carefully apply the Neumann trace $\\gamma_1$ to the representation formula and solve the resulting boundary integral equation for $m \\in H^{\\frac12}(\\Gamma)$ by discretisation of the following variational formulation: \n",
     "\n",
-    "$$\\begin{array}{r c ccc} \\forall \\, v\\in H^{\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma v \\cdot \\gamma_1 \\left(\\mathrm{DL}(m) \\right) \\, \\mathrm d s  &=&  \\displaystyle \\int\\limits_\\Gamma j \\cdot  v \\,\\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{D}\\,\\mathrm{m} &=& \\mathrm{M} \\, \\mathrm j \\,. \\end{array} $$ \n"
+    "$$\\begin{array}{r c ccc} \\forall \\, v\\in H^{\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma v \\cdot \\gamma_1 \\left(\\mathrm{DL}(m) \\right) \\, \\mathrm d s  &=&  -\\displaystyle \\int\\limits_\\Gamma j \\cdot  v \\,\\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{D}\\,\\mathrm{m} &=& -\\mathrm{M} \\, \\mathrm j \\,. \\end{array} $$ \n"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "source": [
     "The discretisation of the variational formulation leads to a system of linear equations, ie \n",
     "\n",
-    "$$ \\left( \\mathrm{D} + \\mathrm{S}\\right) \\, \\mathrm{m}= \\mathrm{M}\\, \\mathrm j\\,, $$ \n",
+    "$$ \\left( \\mathrm{D} + \\mathrm{S}\\right) \\, \\mathrm{m}= -\\mathrm{M}\\, \\mathrm j\\,, $$ \n",
     "\n",
     "where $\\mathrm{D}$ is the hypersingular operator and the stabilisation $(\\mathrm D + \\mathrm{S})$ is regular and symmetric and $\\mathrm j$ is the given Neumann data."
    ]
@@ -147,7 +147,7 @@
     "\n",
     "n = specialcf.normal(3)\n",
     "j = gradu_exa*n\n",
-    "rhs = LinearForm(j*vH1.Trace()*ds(bonus_intorder=3)).Assemble()"
+    "rhs = LinearForm(-j*vH1.Trace()*ds(bonus_intorder=3)).Assemble()"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = LaplaceSL(-curl(uH1)*ds) * curl(vH1)*ds # ZU KLÄREN VORZEICHEN irgendwo geht ein VORZEICHEN SCHIEF"
+    "D = LaplaceSL(curl(uH1)*ds) * curl(vH1)*ds"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "with TaskManager():\n",
     "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
     "Draw(repformula,vismesh)\n",
-    "Draw(repformula - u_exa, vismesh) # same modulo constant"
+    "Draw(repformula - u_exa, vismesh) # this is a constant "
    ]
   },
   {
